k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testbed-api-service
spec:
  selector:
    app: testbed-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
